fixed all register controller bugs

--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=y
 REFRESH_TOKEN_EXPIRY=10d
 
-CLOUDINARY_CLOUD_NAME = nilarnab
+CLOUDINARY_CLOUD_NAME = dm9tdtevc
 CLOUDINARY_API_KEY= 687326674481699
 CLOUDINARY_API_SECRET=dKxbzaBmSj_Pc2gH6t6fUOmHkTg
